--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,4 +31,4 @@ jobs:
           gh release create "$tag" \
             --title="$tag" \
             --draft \
-            /build/main.js manifest.json build/styles.css
+            build/main.js manifest.json build/styles.css
